<resources>
    <string name="app_name">Pokedex</string>
    <string name="num_pokemon">Digite o número do pokémon</string>
    <string name="search">Pesquisar</string>
    <string name="init_text">Pesquise um Pokémon</string>
    <string name="error_search">Pokémon não encontrado</string>
    <string name="network_unnavailable">Conexão com a rede indisponível</string>
    <string name="invalid_number">Número informado inválido</string>
    <string name="base_id_text">ID:</string>
    <string name="base_name_pokemon">Nome:</string>
    <string name="base_height_pokemon">Altura (cm):</string>
    <string name="base_weight_pokemon">Peso (kg):</string>
    <string name="content_image_view">Imagem do Pokémon pesquisado</string>
    <string name="base_types_pokemon">Tipos:</string>
    <string name="txt_speed">Velocidade</string>
    <string name="txt_estatisticas">Estatísticas:</string>
    <string name="txt_special_defense">Defesa Especial</string>
    <string name="txt_special_attack">Ataque Especial</string>
    <string name="txt_defense">Defesa</string>
    <string name="txt_attack">Ataque</string>
    <string name="txt_hp">Vida</string>
    <string name="btn_luck">Estou com sorte</string>
</resources>
