<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ll_main"
    tools:context="br.com.alencar.jose.pokedex.MainActivity">

    <EditText
        android:layout_alignParentTop="true"
        android:id="@+id/et_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/num_pokemon"
        android:inputType="number"
        tools:layout_editor_absoluteX="8dp" />
    <Button
        android:id="@+id/bt_search"
        android:layout_below="@+id/et_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:onClick="pesquisar"/>

    <ProgressBar
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_nome"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/tv_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/init_text"
        android:layout_below="@+id/bt_search"
        android:layout_centerHorizontal="true"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_pokemon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/spinner"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_id_pokemon"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/base_id_text"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_nome_pokemon"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/base_name_pokemon"/>
            <TextView
                android:id="@+id/tv_altura_pokemon"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/base_height_pokemon"/>
            <TextView
                android:id="@+id/tv_peso_pokemon"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/base_weight_pokemon"/>
            <TextView
                android:id="@+id/tv_types_pokemon"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/base_types_pokemon"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="end">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/txt_estatisticas"
                        android:layout_gravity="start"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/txt_speed"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/txt_special_defense"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/txt_special_attack"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/txt_defense"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/txt_attack"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/txt_hp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/default_padding"
                    android:paddingRight="@dimen/default_padding">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                    <ProgressBar
                        android:id="@+id/pb_speed"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:max="180"
                        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                        />
                    <ProgressBar
                        android:id="@+id/pb_special_defense"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:max="180"
                        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                        />
                    <ProgressBar
                        android:id="@+id/pb_special_attack"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:max="180"
                        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                        />
                    <ProgressBar
                        android:id="@+id/pb_defense"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:max="180"
                        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                        />
                    <ProgressBar
                        android:id="@+id/pb_attack"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:max="180"
                        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                        />
                    <ProgressBar
                        android:id="@+id/pb_hp"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:max="180"
                        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                        />
                </LinearLayout>
            </LinearLayout>
            <ImageView
                android:id="@+id/iv_pokemon"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="4"
                android:contentDescription="@string/content_image_view"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
